manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dep
  labels:
    app: backend
spec:
  replicas: 1 # Number of replicas
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: goorm-image
          image: ECR 이미지 주소
          ports:
            - containerPort: 3001 # Ensure this matches the port your app listens on
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
