manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort # Change to LoadBalancer later for AWS Load Balancer
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
